--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </p>
 
         <p>
-          I'm currently working on my Master’s in Business Administration with a focus on Information Technology at Western Governors University. With a Bachelor’s in Computer Science and a Master’s in Cyber Security already under my belt, I have a solid mix of academic knowledge and real-world experience. I’ve earned 12 AWS certifications and have hands-on experience with a wide range of programming languages and operating systems. I’m all about using this blend of skills to drive innovation and achieve great results in the tech world.
+          I just recently completed my Master’s in Business Administration with a focus on Information Technology at Western Governors University. With a Bachelor’s in Computer Science and a Master’s in Cyber Security already under my belt, I have a solid mix of academic knowledge and real-world experience. I’ve earned 12 AWS certifications and have hands-on experience with a wide range of programming languages and operating systems. I’m all about using this blend of skills to drive innovation and achieve great results in the tech world.
         </p>
 
         <p>
